2007-11-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/color.[h,cpp]: Make into a cleaner base class
	for custom color maps. Add a name() property to return the
	user-visible name of the color scheme.

	* libavogadro/src/elementcolor.[h,cpp]: New subclass for the
	default scheme.

	* libavogadro/src/engine.[h,cpp]: Revise colorMap() routines to
	pass pointers to preserve subclasses.

	* libavogadro/src/engines/*.cpp: Fix engines to use new colorMap
	support, including fallback between custom (i.e., per-engine) and
	global color maps. Lift color maps outside of loops for improved
	performance.

	* libavogadro/src/glwidget.[h,cpp]: Add support for adding a
	global, custom color map for primitives. By default, falls back to
	the ElementColor scheme (i.e., color each atom by the element type).

	* libavogadro/src/painterdevice.h, libavogadro/src/povpainter.h:
	Add PainterDevice wrapping of the GLWidget colorMap, as above.

2007-05-29 Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/drawtool.*: DrawTool now allows you to
	generate molecules from smiles and place them in the GLWidget.
	
2007-05-29 Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/drawtool.*: Added a QLineEdit and QPushButton
	to generate 3D structures from the draw tool. Geoff and I talked about
	this before. But I don't know how to get access to the molecule from
	DrawTool::gen3D()?

2007-05-28 Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* avogadro/src/extentions/forcefieldextention.cpp: Changed MMF94 to
	MMFF94 (otherwise MMFF94 is not usable...)

2007-11-28  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/engines/ribbonengine.*,
	libavogadro/src/engines/ribbonsettingswidget.ui: Removed the opacity
	slider for now. Also added in a new display type - lines. Renders
	cylinders between points and spheres at each point.

2007-11-27  Marcus D. Hanwell <marcus@cryos.org>
